# ProyectoFinalFisLab

./: Copia_de_minimos_cuadrados.ipynb  Minimos_cuadrados1.ipynb  Nuevo Python File.py  README.md  graficos01.ipynb  informe.9m.md  informe.k.md  informe.md  informe.md.  minimos_cuadrados.ipynb  minimos_cuadrados.py  minimos_cuadrados_informe.md  pyproject.toml  teoria_git.md  teoria_poetry.md  teoria_unittest.md  teoría Git
.github/workflows/: CI.yml
.github/workflows/src/: nuevo_codigo.py
.github/workflows/test/: test_nuevo_codigo.py
SRC/: limitaciones_informe.md  recomendaciones_informe.md  resultados_y_conclusiones.md  semana_5.py
src/: linearizacion.py  mmc_informe.md
src/semana_5.py/: movimiento_oscilatorio.ipynb  resorte_y_periodo_de_osilacion.md
src/src/: ajuste_mmc.py
