[tool.poetry]
name = "proyecto-final-fisica-labo"
version = "0.1.0"
description = "Proyecto de movimiento armónico simple"
authors = ["kater <k.villarroel.sejas@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "*"
matplotlib = "*"
jupyter = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
